apps/atmos-token-distributor/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: ghcr.io/starrybluesky/atmos-token-distributor:master
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
