apps/atmos-token-distributor/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service

spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: default
