apps/atmos-token-distributor/resources/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`basic.starry.blue`)
      services:
        - name: service
          port: 3000
